--- a/manifest.json
+++ b/manifest.json
@@ -10,14 +10,14 @@
   "prefer_related_applications": false,
   "icons": [
     {
-      "src": "icons/abd_profile.jpeg",
+      "src": "icons/abd_profile.jpg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/jpeg"
     },
     {
-      "src": "icons/abd_profile.jpeg",
+      "src": "icons/abd_profile.jpg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/jpeg"
     }
   ]
 }
